--- a/server/.env
+++ b/server/.env
@@ -1,8 +1,8 @@
-MONGODB_URI = "mongodb+srv://haseeyaf:eCom_01_hsyf@cluster0.nhn0hpj.mongodb.net" 
-JWT_SECRET = "userSSecret"
-NODE_ENV = "development"
+MONGODB_URI =  
+JWT_SECRET = 
+NODE_ENV = 
 
-SMTP_USER = "8fa953001@smtp-brevo.com"
-SMTP_PASS = "TCZdBS9xvqgajpOf"
+SMTP_USER = 
+SMTP_PASS = 
 
-EMAIL_USER = "haseeyaf@gmail.com"
+EMAIL_USER = 
